fix: paragraph spacing

--- a/assets/scss/components/blocks/paragraph.scss
+++ b/assets/scss/components/blocks/paragraph.scss
@@ -37,10 +37,11 @@
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
-    line-height: 28px; /* 175% */
+    line-height: 28px; 
 
     @media (max-width: $vp-tabletLandscape) {
       font-size: 12px;
+      line-height: 24px
     }
 
     a {
@@ -50,6 +51,8 @@
     ul {
       list-style: disc;
       margin-left: 20px;
+      margin-top: 0;
+      padding-top: 0;
     }
   }
 }
